# macromol_census

./: CHANGELOG.md  README.rst  pyproject.toml
.github/workflows/: test.yml
docs/: Makefile  basic_usage.rst  conf.py
macromol_census/: __init__.py  database_io.py  error.py  extract_fasta.py  extract_nonredundant_assemblies.py  find_assembly_subchain_cover.py  ingest_blacklist.py  ingest_entity_clusters.py  ingest_mmcif.py  ingest_models.py  ingest_nonspecific_ligands.py  ingest_structures.py  ingest_validation.py  pick_assemblies.py  pisces.py  util.py  working_db.py
macromol_census/database_io/: redundancy.py  util.py
tests/: test_database_io.py  test_database_io_redundancy.py  test_find_assembly_subchain_cover.py  test_find_identical_branched_entities.py  test_ingest_blacklist.py  test_ingest_chemicals.py  test_ingest_mmcif.nt  test_ingest_mmcif.py  test_ingest_models.nt  test_ingest_models.py  test_ingest_nonspecific_ligands.py  test_ingest_structures.py  test_ingest_validation.py  test_pick_assemblies.py  test_pisces.nt  test_pisces.py  test_rank_assemblies.nt  test_rank_assemblies.py  test_rank_structures.py  test_working_db.py
tests/structures/: 4erd.cif
