[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "macromol_census"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = 'README.rst'
dynamic = ["version", "description"]
requires-python = "~=3.10"
classifiers = [
  'Programming Language :: Python :: 3',
]
dependencies = [
  #'polars',
  'networkx',
]

[project.optional-dependencies]
test = [
  'pytest',
  'parametrize_from_file',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]
[project.scripts]
mmc_ingest_mmcif = "macromol_census.ingest_mmcif:main"
mmc_extract_fasta = "macromol_census.extract_fasta:main"
mmc_ingest_entity_clusters = "macromol_census.ingest_entity_clusters:main"

[project.urls]
'Documentation' = 'https://macromol-census.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/macromol_census'
'Bug Tracker' = 'https://github.com/kalekundert/macromol_census/issues'
'Continuous Integration' = 'https://github.com/kalekundert/macromol_census/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/macromol_census'

[tool.ruff]
select = ["F"]
ignore = ["F405", "F403"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'

[tool.coverage.run]
branch = true
parallel = true
source = ['macromol_census']

[tool.coverage.report]
exclude_lines = [
    "^\\s*raise AssertionError\\b",
    "^\\s*raise NotImplementedError\\b",
]

[tool.semantic_release]
branch = 'release'
version_variable = 'macromol_census/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
major_on_zero = false
